fix dark mode

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,7 +14,6 @@ body {
 	background: var(--bg-drawer);
 }
 
-@media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
 		// background-color: #ededed;
@@ -26,7 +25,6 @@ body {
 	button {
 		background-color: #f9f9f9;
 	}
-}
 
 .left {
 	background: var(--bg-drawer-dark);
